💄 fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -87,8 +87,6 @@ output{
 }
 .title{
   grid-area: title;
-  min-width: 360px;
-  max-width: 360px;
 }
 #board svg{
   width: 360px;
